Fixed scrollbars in title area bug on Safari

--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ display: block; float: right; width: 227px; margin: 0; padding: 10px 0 11px 10px
 
 
 
-#mainContent .block { clear: both; margin-bottom: 35px; padding-left: 1%; overflow-y: auto; }
+#mainContent .block { clear: both; margin-bottom: 35px; padding-left: 1%; overflow-y: visible; }
 #mainContent .feature { 
 	/*border-bottom:  1px solid #ddd;*/ 
 	padding-bottom:  30px; 
